@@ -1,3 +1,7 @@
+* 2013-07-23 - marc.arens@open-xchange.com
+
+ - Fix for bug 27712: Set maxForm- and maxBufferedPostSize to com.openexchange.servlet.maxBodySize
+
 * 2013-07-22 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 27663: Always include ORDER BY columns in SELECT clause when using UNION SELECTs 
